--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "author": "yo1000 <yoichi.kikuchi.aug@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "vuepress build ."
+    "docs:build": "vuepress build docs"
   }
 }
