--- a/package.json
+++ b/package.json
@@ -70,5 +70,12 @@
     "webpack-serve": "^0.3.2",
     "webpackbar": "^2.6.1",
     "workbox-build": "^3.1.0"
-  }
+  },
+  "engines": {
+    "node": ">=8"
+  },
+  "browserslist": [
+    ">1%"
+  ]
 }
+
