--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "license": "MIT",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "docs:dist": "http-server ./docs/.vuepress/dist/"
   },
   "devDependencies": {
+    "http-server": "^0.11.1",
     "vuepress": "^0.8.4"
   }
 }
