--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "yo1000 <yoichi.kikuchi.aug@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vuepress dev ./docs",
-    "docs:build": "vuepress build ./docs",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "docs:dist": "http-server ./docs/.vuepress/dist/"
   },
   "devDependencies": {
