--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "yo1000 <yoichi.kikuchi.aug@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
-    "docs:dist": "http-server ./docs/.vuepress/dist/"
+    "docs:dev": "vuepress dev ./docs",
+    "docs:build": "vuepress build ./docs",
+    "docs:dist": "http-server ./docs/.vuepress/dist"
   },
   "devDependencies": {
     "http-server": "^0.11.1",
